[package]
name = "func_cheater_stats"
version = "0.1.0"
authors = ["LokiVKlokeNaAndoke <ma.ba1@rambler.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = "0.2.0"
log = "0.4.8"
tokio = "0.2.16"
fern = "0.6.0"
chrono = "0.4.11"