[package]
name = "func_cheater_stats"
version = "0.1.0"
authors = ["LokiVKlokeNaAndoke <ma.ba1@rambler.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = "0.2.0"
log = "0.4.8"
tokio = "0.2.16"
fern = "0.6.0"
chrono = "0.4.11"
derive_more = "0.99.5"
serde = "1.0.106"
serde_json = "1.0"
sled = "0.31.0"
smart-default = "0.6.0"
regex = "1.3.6"
lazy_static = "1.4.0"
reqwest = "0.10.4"
plotlib = "0.5.1"
svg = "0.7.1"
resvg = { version = "0.9.0", features = ["qt-backend"] }
uuid = { version = "0.8.1", features = ["v4"] }
itertools = "0.9.0"